<resources>
    <string name="app_name">home</string>
    <string name="text">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="option">Настройки</string>
    <string name="themes">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="forward">Пользовательское соглашение</string>
    <string name="myEmail">Guss56@yandex.ru</string>
    <string name="themeMessage">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="emailText">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="practicumUrl">https://practicum.yandex.ru/profile/android-developer/?from=learn_subscriptions-with-prof-recommendations/</string>
    <string name="NameTrack">NameTrack</string>
    <string name="NameArtist">Artist</string>
    <string name="TrackDuration">5:00</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="Refresh">Обновить</string>
    <string name="SearchMessage">Вы искали</string>
    <string name="ClearHistory">Очистить историю</string>
    <string name="duration">Продолжительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="mediaEmpty">Ваша медиатека пуста</string>
    <string name="playlistEmpty">Вы не создали \n ни одного плейлиста</string>
    <string name="createPlayList">Новый плейлист</string>
    <string name="CompletionPlayerTrack">"00:00"</string>
    <string name="NewPlayList">"Новый плейлист"</string>

</resources>