<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/menu"
    android:background="?attr/colorSecondary"
    android:padding="@dimen/padding_Start"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_width"
        android:layout_weight="1"
        android:text="@string/text"
        android:textSize="@dimen/main_text_size"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/white" />
    <Button
        android:layout_width = "match_parent"
        android:layout_height="@dimen/layout_width"
        android:layout_weight="@dimen/main_layout_weight"
        android:id="@+id/search"
        android:text="@string/search"
        app:icon="@drawable/search"
        style="@style/Button_style"
        />
    <Button
        android:layout_width = "match_parent"
        android:layout_height="@dimen/layout_width"
        android:layout_weight="@dimen/main_layout_weight"
        android:id="@+id/media"
        android:text="@string/media"
        app:icon="@drawable/media"
        style="@style/Button_style"
        />
    <Button
        android:layout_width = "match_parent"
        android:layout_height="@dimen/layout_width"
        android:layout_weight="@dimen/main_layout_weight"
        android:id="@+id/option"
        android:text="@string/option"
        app:icon="@drawable/option"
        style="@style/Button_style"
        />
</LinearLayout>






