
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:fontFamily="@font/ys_display_medium"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/white"
        app:navigationIcon="@drawable/back"
        app:title="@string/option"
        app:titleTextColor="@color/black"
        android:layout_marginTop="@dimen/padding_Start"
        android:gravity="center"
        app:buttonGravity="center_vertical"
        app:iconPadding="@dimen/padding_Start">
    </androidx.appcompat.widget.Toolbar>
    <androidx.appcompat.widget.SwitchCompat
        android:fontFamily="@font/ys_display_medium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/LinearLayout_layout_height"
        android:text="@string/themes"
        android:layout_marginEnd="6dp"
        android:backgroundTint="@color/white"
        android:textSize="@dimen/text_size"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:padding="@dimen/padding_Start"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/LinearLayout_layout_height">
        <TextView
            android:text="@string/share"
            style="@style/Text_Viev_style"/>
        <ImageView
            android:id="@+id/share"
            app:srcCompat="@drawable/share"
            style="@style/Image_Viev_style"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/LinearLayout_layout_height">
        <TextView
            android:text="@string/support"
            style="@style/Text_Viev_style"/>
        <ImageView
            android:id="@+id/support"
            app:srcCompat="@drawable/support"
            style="@style/Image_Viev_style"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/LinearLayout_layout_height">
        <TextView
            android:text="@string/forward"
            style="@style/Text_Viev_style"/>
        <ImageView
            android:id="@+id/foward"
            app:srcCompat="@drawable/forward"
            style="@style/Image_Viev_style"
            />
    </LinearLayout>




</LinearLayout>


