
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?background"
    tools:context=".presentation.ui.menu.MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/white"
        app:navigationIcon="@drawable/back"
        app:title="@string/option"
        app:titleTextColor="@color/black"
        android:layout_marginTop="@dimen/padding_Start"
        android:gravity="center"
        app:buttonGravity="center_vertical"
        app:iconPadding="@dimen/padding_Start">
    </androidx.appcompat.widget.Toolbar>
    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/LinearLayout_layout_height"
        android:text="@string/themes"
        android:layout_marginEnd="6dp"
        android:backgroundTint="@color/white"
        android:textSize="@dimen/text_size"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:padding="@dimen/padding_Start"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/LinearLayout_layout_height">
        <TextView
            android:paddingStart="@dimen/padding_Start"
            android:layout_width="@dimen/layout_width"
            android:layout_weight="@dimen/layout_weight"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:gravity="start|center_vertical"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />
        <ImageView
            android:id="@+id/share"
            android:layout_width="@dimen/icon_Width"
            android:layout_height="@dimen/layout_height"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/share"
            android:foreground="?attr/selectableItemBackground"
            app:srcCompat="@drawable/share"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/LinearLayout_layout_height">
        <TextView
            android:paddingStart="@dimen/padding_Start"
            android:layout_width="@dimen/layout_width"
            android:layout_weight="@dimen/layout_weight"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:gravity="start|center_vertical"
            android:text="@string/support"
            android:textColor="@color/black"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:textSize="@dimen/text_size"/>
        <ImageView
            android:id="@+id/support"
            android:layout_width="@dimen/icon_Width"
            android:layout_height="@dimen/layout_height"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/support"
            android:foreground="?attr/selectableItemBackground"
            app:srcCompat="@drawable/support"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/LinearLayout_layout_height">
        <TextView
            android:paddingStart="@dimen/padding_Start"
            android:layout_width="@dimen/layout_width"
            android:layout_weight="@dimen/layout_weight"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:gravity="start|center_vertical"
            android:text="@string/forward"
            android:textColor="@color/black"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:textSize="@dimen/text_size"/>
        <ImageView
            android:id="@+id/forward"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="@dimen/icon_Width"
            android:layout_height="@dimen/layout_height"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/forward"
            app:srcCompat="@drawable/forward"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            />
    </LinearLayout>




</LinearLayout>


