<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/rootLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginStart="@dimen/TrackLayoutStart">

        <ImageView
            android:id="@+id/ivTrackTitle"
            android:layout_width="@dimen/TrackImageHeight"
            android:layout_height="@dimen/TrackImageHeight"
            android:layout_marginVertical="@dimen/TrackMarginStart"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tvTrackName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tool:text="@string/NameTrack"
                android:layout_marginStart="@dimen/TrackMarginStart"
                android:layout_marginTop="@dimen/TrackMarginTopText"
                android:gravity="start|center_vertical"
                android:textSize="@dimen/TrackSizeText"
                style="@style/tv_TrackName"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvTrackNameArtist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    tool:text="@string/NameArtist"
                    android:textSize="@dimen/TrackSizeSmallText"
                    android:layout_marginStart="@dimen/TrackMarginStart"
                    android:layout_marginTop="@dimen/TrackMarginTopSmallText"
                    android:layout_marginBottom="@dimen/TrackMarginBottomSmallText"
                    style="@style/tv_Track"
                    />
                <ImageView
                    android:id="@+id/ellipse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    app:srcCompat="@drawable/ellipse"
                    android:layout_marginTop="@dimen/TrackMarginTopSmallText"
                    android:layout_marginBottom="@dimen/TrackMarginBottomSmallText"
                    style="@style/iv_Track"
                    />
                <TextView
                    android:id="@+id/tvTrackDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    tool:text="@string/TrackDuration"
                    android:layout_marginTop="@dimen/TrackMarginTopSmallText"
                    android:textSize="@dimen/TrackSizeSmallText"
                    android:layout_marginBottom="@dimen/TrackMarginBottomSmallText"
                    style="@style/tv_Track"
                    />
            </LinearLayout>
        </LinearLayout>
    <ImageView
        android:layout_width ="@dimen/TrackIconHeight"
        android:layout_height ="@dimen/TrackIconHeight"
        android:layout_gravity ="end|center_vertical"
        android:id="@+id/forward"
        app:srcCompat="@drawable/forward"
        style="@style/iv_Track"
        android:layout_marginStart="@dimen/TrackMarginStart"
        android:layout_marginEnd="@dimen/TrackMarginEndIcon"
        />
</LinearLayout>