<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?background"
    >
        
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools"
    tools:context=".player.presentation.MediaPlayer">

    <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbarBack"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:backgroundTintMode="?attr/colorPrimary"
    app:navigationIcon="@drawable/back"
    app:iconTint="@color/white"
    app:titleTextColor="?attr/colorOnPrimary"
    android:layout_marginTop="@dimen/margin_Top_Search"
    android:gravity="center"
    app:buttonGravity="center_vertical"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.Guideline
    android:id="@+id/leftBorder"
    android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
    android:id="@+id/rightBorder"
    android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

    <ImageView
    android:id="@+id/title"
    android:layout_width="0dp"
    android:layout_height="0dp"
        app:layout_constraintDimensionRatio="H,1:1"
    android:layout_marginTop="@dimen/ivMarginTop"
    app:layout_constraintTop_toBottomOf="@id/toolbarBack"
    app:layout_constraintEnd_toStartOf="@id/rightBorder"
    app:layout_constraintStart_toStartOf="@id/leftBorder"
    app:layout_constraintBottom_toTopOf="@id/name"
    />

    <TextView
    android:id="@+id/name"
    android:fontFamily="@font/ys_display_medium"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/tvNameMarginTop"
        android:textColor="?attr/errorIconDrawable"
        android:paddingStart="@dimen/tvNamePaddingStart"
        android:textSize="@dimen/TextSizeNameAlbum"
        android:textStyle="bold"
        tool:text="Yesterday (Remastered 2009)"
    app:layout_constraintTop_toBottomOf="@id/title"
    app:layout_constraintEnd_toStartOf="@id/rightBorder"
    app:layout_constraintStart_toStartOf="@id/leftBorder"
    app:layout_constraintBottom_toTopOf="@id/trackName"
    android:tooltipText="trackName"/>

    <TextView
    android:id="@+id/trackName"
    android:fontFamily="@font/ys_display_medium"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/tvTrackNameMarginTop"
        android:textColor="?attr/errorIconDrawable"
        android:paddingStart="@dimen/tvTrackNamePaddingStart"
        android:textSize="@dimen/tvNameTextSize"
        android:textStyle="bold"
        tool:text="The Beatles"
    app:layout_constraintTop_toBottomOf="@id/name"
    app:layout_constraintEnd_toStartOf="@id/rightBorder"
    app:layout_constraintStart_toStartOf="@id/leftBorder"
    app:layout_constraintBottom_toTopOf="@id/playOrPause"
    android:tooltipText="artistName"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/buttonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="addTrack,like" />
    <ImageView
    android:id="@+id/addTrack"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:srcCompat="@drawable/add"
    android:elevation="@dimen/elevation"
    android:background="@drawable/drawable_image"
    app:layout_constraintTop_toBottomOf="@id/trackName"
    app:layout_constraintTop_toTopOf="@id/playOrPause"
    app:layout_constraintBottom_toBottomOf="@id/playOrPause"

    app:layout_constraintStart_toStartOf="@id/leftBorder"
    android:layout_marginEnd="@dimen/marginIvMedia"

    />
    <ImageView
    android:id="@+id/like"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:srcCompat="@drawable/like"
    android:elevation="@dimen/elevation"
    android:background="@drawable/drawable_image"
    app:layout_constraintTop_toTopOf="@id/playOrPause"
    app:layout_constraintBottom_toBottomOf="@id/playOrPause"
    app:layout_constraintEnd_toStartOf="@id/rightBorder"
    android:layout_marginStart="@dimen/marginIvMedia"
    />

    <ImageView
    android:id="@+id/playOrPause"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:srcCompat="@drawable/play"
    android:layout_marginTop="28dp"
    app:layout_constraintTop_toBottomOf="@id/trackName"
    app:layout_constraintEnd_toStartOf="@id/rightBorder"
    app:layout_constraintStart_toStartOf="@id/leftBorder"
    />

    <TextView
    android:id="@+id/time"
    android:textColor="?attr/errorIconDrawable"
        android:text ="00:00"
        android:textSize="@dimen/tvTimeTextSize"
        android:textAlignment="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    app:layout_constraintTop_toBottomOf="@id/playOrPause"
    app:layout_constraintEnd_toStartOf="@id/rightBorder"
    app:layout_constraintStart_toEndOf="@id/leftBorder"
    app:layout_constraintBottom_toTopOf="@id/durationName"/>

    <TextView
    android:id="@+id/durationName"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textColor="@color/titleTrackColor"
    android:text="@string/duration"
    android:layout_marginTop="30dp"
    app:layout_constraintTop_toBottomOf="@id/time"
    app:layout_constraintEnd_toStartOf="@id/duration"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintHorizontal_chainStyle="spread"
    style="@style/tv_media_start"
    />
    <TextView
    android:id="@+id/duration"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textColor="?attr/errorIconDrawable"
        tool:text="5:35"
    app:layout_constraintTop_toTopOf="@id/durationName"
    app:layout_constraintBottom_toBottomOf="@id/durationName"
    app:layout_constraintTop_toBottomOf="@id/time"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/durationName"
    style="@style/tv_media_end"
    />


    <TextView
    android:id="@+id/albumName"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textColor="@color/titleTrackColor"
    android:text="@string/album"
    app:layout_constraintHorizontal_chainStyle="spread"
    app:layout_constraintTop_toBottomOf="@id/durationName"
    app:layout_constraintEnd_toStartOf="@id/album"
    app:layout_constraintStart_toStartOf="parent"
    style="@style/tv_media_start"

    />

    <TextView
        android:id="@+id/album"
        style="@style/tv_media_end"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?attr/errorIconDrawable"
        app:layout_constraintBottom_toBottomOf="@id/albumName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/albumName"
        app:layout_constraintTop_toBottomOf="@id/duration"
        app:layout_constraintTop_toTopOf="@id/albumName"
        app:layout_constraintVertical_bias="0.804"
        android:maxLines="1"
        android:ellipsize = "end"
        tool:text="Yesterday (Remastered 2009)" />

    <TextView
    android:id="@+id/yearName"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textColor="@color/titleTrackColor"
    android:text="@string/year"
    app:layout_constraintTop_toBottomOf="@id/albumName"
    app:layout_constraintEnd_toStartOf="@id/year"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintHorizontal_chainStyle="spread"
    style="@style/tv_media_start"

        />
    <TextView
    android:id="@+id/year"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textColor="?attr/errorIconDrawable"
        tool:text="1965"
    app:layout_constraintTop_toTopOf="@id/yearName"
    app:layout_constraintBottom_toBottomOf="@id/yearName"
    app:layout_constraintTop_toBottomOf="@id/album"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/yearName"
    style="@style/tv_media_end"
        />


    <TextView
    android:id="@+id/genreName"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textColor="@color/titleTrackColor"
    android:text="@string/genre"
    app:layout_constraintTop_toBottomOf="@id/yearName"
    app:layout_constraintEnd_toStartOf="@id/genre"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintHorizontal_chainStyle="spread"
    style="@style/tv_media_start"
        />
    <TextView
    android:id="@+id/genre"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textColor="?attr/errorIconDrawable"
        tool:text="Rock"
    app:layout_constraintTop_toTopOf="@id/genreName"
    app:layout_constraintBottom_toBottomOf="@id/genreName"
    app:layout_constraintTop_toBottomOf="@id/year"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/genreName"
    style="@style/tv_media_end"
        />


    <TextView
    android:id="@+id/countryName"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textColor="@color/titleTrackColor"
    android:text="@string/country"
    app:layout_constraintTop_toBottomOf="@id/genreName"
    app:layout_constraintEnd_toStartOf="@id/country"
    app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
    style="@style/tv_media_start"

        />
    <TextView
    android:id="@+id/country"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textColor="?attr/errorIconDrawable"
        tool:text="Великобритания"
    app:layout_constraintTop_toTopOf="@id/countryName"
    app:layout_constraintBottom_toBottomOf="@id/countryName"
    app:layout_constraintTop_toBottomOf="@id/genre"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/countryName"
    style="@style/tv_media_end"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>